# spacelink

./: .gitignore  .gitlab-ci.yml  .typos.toml  AUTHORS  Cargo.toml  MAINTAINERS  README.md  com.maxrdz.Spacelink.json  meson.build  meson.options
dispatch/: Cargo.toml  meson.build
dispatch-daemon/: Cargo.toml
dispatch/src/: app.rs  config.rs  i18n.rs  main.rs
dispatchd/: Cargo.toml
i18n/en/: spacelink.ftl
resources/: app.dbus-api.xml  app.dbus.service.in  app.desktop.in  app.metainfo.xml.in  app.service.in  meson.build
resources/icons/: meson.build
spacelink/: Cargo.toml  meson.build
spacelink/src/: app.rs  config.rs  i18n.rs  main.rs  meson.rs.in
spacelink/src/model/: mms.rs  mod.rs  sms.rs
spacelink/src/views/: messages.rs  mod.rs
spacelinkd/: Cargo.toml  meson.build
spacelinkd/src/: main.rs  meson.rs.in
