[package]
name = "dispatch"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
cfg-if.workspace = true
futures-util = "0.3.31"
i18n-embed.workspace = true
i18n-embed-fl = "0.9.2"
libcosmic.workspace = true
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
zbus.workspace = true
zspell = "0.5"
