[package]
name = "spacelinkd"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
cfg-if.workspace = true
modemmanager = { git = "https://github.com/omnect/modemmanager.git" }
smol = "2.0"
sqlite = "0.36"
zbus.workspace = true
